# dagster-meltano

./: .gitignore  .pylintrc  Dockerfile  README.md  environment.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  vscode.Dockerfile
.github/workflows/: publish.yaml  test.yaml
dagster/: pipeline.py
dagster_meltano/: __init__.py  assets.py  dagster_types.py  exceptions.py  generation.py  job.py  jobs.py  logging.yaml  meltano_elt.py  meltano_invoker.py  meltano_resource.py  meltano_select.py  ops.py  schedule.py  solids.py  solids_new.py  utils.py
dagster_meltano/log_processing/: __init__.py  json_processor.py  metadata_processor.py  passthrough_processor.py
dagster_meltano/meltano/: extract_load.py  extractor.py  job.py  logger.py  resource.py  schedule.py
dagster_meltano/tests/: constructor.py  meltano_elt_pipeline.py  pipeline.py  repo.py  solid.py  test_dagster_types.py  test_meltano_elt.py  test_meltano_select.py  test_solids.py  utils.py
meltano/: meltano.yml
meltano/extract/: sample.csv
meltano/fresh/: sample.jsonl
meltano/notebook/: meltano_jobs.ipynb
meltano/orchestrate/: repository.py  repository_backup.py
meltano/transform/: dbt_project.yml
meltano/transform/models/: count_rows.sql  models.yaml  sources.yaml
meltano/transform/profiles/: profiles.yml
meltano_project/: meltano.yml
meltano_project/orchestrate/dagster/: repository.py
output/: entry.jsonl  generationmix.jsonl
tests/: test_generation.py  test_meltano_command.py  test_meltano_elt.py  test_meltano_install.py  test_meltano_run.py
tests/meltano_test_project/: meltano.yml
