[tool.poetry]
name = "dagster-meltano"
version = "1.0.0"
description = "A dagster plugin that allows you to run your Meltano project inside Dagster."
authors = ["Jules Huisman"]
license = "Apache 2.0"
packages = [
    { include = "dagster_meltano" }
]

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
dagster = ">=1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/quantile-development/dagster-meltano"