[metadata]
name = dagster-meltano
version = 0.0.1
author = Jules Huisman
author_email = jules.huisman@quantile.nl
description = A dagster plugin that allows you to run Meltano in Dagster
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantile-development/dagster-meltano
project_urls =
    Bug Tracker = https://github.com/quantile-development/dagster-meltano/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dagster_meltano
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dagster_meltano